Name:		HROOT
Version:	0.4.3.0
Synopsis:	Wrapper for ROOT
Description: 	Haskell FFI Wrapper for frequently used ROOT routines.  
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
		 HROOT
		 HROOT.Type
		 HROOT.Function
                 HROOT.Class
                 HROOT.AddOn
                 HROOT.AddOnFunction

Extra-source-files: csrc/HROOT.h
                    csrc/addon.h

extra-lib-dirs: /home/wavewave/nfs/root/lib
extra-libraries: stdc++,   
		 New, Core, Cint, 
		 Graf, MathCore, RIO, Hist, Matrix,
		 Graf3d, Gpad, Html, Thread, 
		 Minuit, Postscript, Proof, Net, Tree, 
		 TreePlayer, Gui, GX11, X3d


Extensions:	 ForeignFunctionInterface

Include-dirs: 	csrc
		/home/wavewave/nfs/root/include

Install-includes: HROOT.h
                  addon.h
C-sources: 	csrc/HROOT.cpp
                csrc/addon.cpp
   