Name:		HROOT
Version:	0.5.0.0
Synopsis:	Wrapper for ROOT
Description: 	Haskell FFI Wrapper for frequently used ROOT routines.  
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4
Build-Type: 	Custom

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
		 HROOT
		 HROOT.Type
		 HROOT.Function
                 HROOT.Class
                 HROOT.AddOn
                 HROOT.AddOnFunction

extra-libraries: stdc++

Extra-source-files: csrc/HROOT.h
                    csrc/addon.h


Extensions:	 ForeignFunctionInterface

Include-dirs: 	csrc

Install-includes: HROOT.h
                  addon.h
C-sources: 	csrc/HROOT.cpp
                csrc/addon.cpp
   


-- ghci -L/usr/lib/gcc/x86_64-linux-gnu/4.4.5/ -lstdc++ -L/home/wavewave/nfs/root/lib/  -lCint -lCore -lNew -lGX11 -lRIO -lPostscript -lMatrix -lMathCore -lHist -lGraf -lGui -lGpad -lThread -lMinuit -lNet -lTree -lProof -lTreePlayer -lGraf3d -lX3d -lHtml
